generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
}

enum AnalysisStatus {
  PENDING
  PROCESSING
  COMPLETED
  FAILED
}

enum DependencyType {
  DEPENDENCY
  DEV_DEPENDENCY
}

model Dependency {
  id                 String         @id @default(uuid()) @db.Uuid
  analysisId         String         @map("analysis_id") @db.Uuid
  name               String
  versionRequirement String         @map("version_requirement")
  type               DependencyType
  createdAt          DateTime       @default(now()) @map("created_at")
  updatedAt          DateTime       @updatedAt @map("updated_at")

  analysis Analysis          @relation(fields: [analysisId], references: [id], onDelete: Cascade)
  scores   DependencyScore[]
  sourceRelationships DependencyRelationship[] @relation("SourceDependencyRelationships")
  targetRelationships DependencyRelationship[] @relation("TargetDependencyRelationships")

  @@unique([analysisId, name, type])
  @@index([analysisId])
  @@map("dependencies")
}

model Analysis {
  id           String         @id @default(uuid()) @db.Uuid
  email        String?
  status       AnalysisStatus @default(PENDING)
  resultToken  String         @unique @default(uuid()) @map("result_token") @db.Uuid
  errorMessage String?        @map("error_message")
  createdAt    DateTime       @default(now()) @map("created_at")
  updatedAt    DateTime       @updatedAt @map("updated_at")

  dependencies Dependency[]
  result       AnalysisResult?
  dependencyRelationships DependencyRelationship[]

  @@index([status])
  @@map("analyses")
}

model StackRequestStat {
  id           String   @id @default(uuid()) @db.Uuid
  stackHash    String   @unique @map("stack_hash")
  stackPayload Json     @map("stack_payload")
  requestCount Int      @default(0) @map("request_count")
  createdAt    DateTime @default(now()) @map("created_at")
  updatedAt    DateTime @updatedAt @map("updated_at")

  @@index([requestCount])
  @@map("stack_request_stats")
}

model DependencyRequestStat {
  id                     String         @id @default(uuid()) @db.Uuid
  dependencyName         String         @map("dependency_name")
  dependencyType         DependencyType @map("dependency_type")
  lastVersionRequirement String         @map("last_version_requirement")
  requestCount           Int            @default(0) @map("request_count")
  createdAt              DateTime       @default(now()) @map("created_at")
  updatedAt              DateTime       @updatedAt @map("updated_at")

  @@unique([dependencyName, dependencyType])
  @@index([requestCount])
  @@map("dependency_request_stats")
}

model AnalysisResult {
  id          String   @id @default(uuid()) @db.Uuid
  analysisId  String   @unique @map("analysis_id") @db.Uuid
  globalScore Int      @map("global_score")
  riskLevel   String   @map("risk_level")
  summary     String
  createdAt   DateTime @default(now()) @map("created_at")

  analysis         Analysis          @relation(fields: [analysisId], references: [id], onDelete: Cascade)
  dependencyScores DependencyScore[]

  @@map("analysis_results")
}

model DependencyScore {
  id               String   @id @default(uuid()) @db.Uuid
  analysisResultId String   @map("analysis_result_id") @db.Uuid
  dependencyId     String   @map("dependency_id") @db.Uuid
  score            Int
  riskLevel        String   @map("risk_level")
  popularityScore  Int?     @map("popularity_score")
  maintenanceScore Int?     @map("maintenance_score")
  resolutionQualityScore Int? @map("resolution_quality_score")
  normalizedInputs Json?    @map("normalized_inputs")
  githubMetrics    Json?    @map("github_metrics")
  issueMetrics     Json?    @map("issue_metrics")
  issueData        Json?    @map("issue_data")   // ADD THIS LINE
  warnings         Json?
  createdAt        DateTime @default(now()) @map("created_at")
  updatedAt        DateTime @updatedAt @map("updated_at")

  analysisResult AnalysisResult @relation(fields: [analysisResultId], references: [id], onDelete: Cascade)
  dependency     Dependency     @relation(fields: [dependencyId], references: [id], onDelete: Cascade)

  @@unique([analysisResultId, dependencyId])
  @@index([dependencyId])
  @@map("dependency_scores")
}

model DependencyRelationship {
  id                 String   @id @default(uuid()) @db.Uuid
  analysisId         String   @map("analysis_id") @db.Uuid
  sourceDependencyId String   @map("source_dependency_id") @db.Uuid
  targetDependencyId String   @map("target_dependency_id") @db.Uuid
  relationshipType   String   @map("relationship_type")
  confidence         String
  riskAdjustment     Int      @default(0) @map("risk_adjustment")
  summary            String
  evidence           Json?
  createdAt          DateTime @default(now()) @map("created_at")
  updatedAt          DateTime @updatedAt @map("updated_at")

  analysis         Analysis   @relation(fields: [analysisId], references: [id], onDelete: Cascade)
  sourceDependency Dependency @relation("SourceDependencyRelationships", fields: [sourceDependencyId], references: [id], onDelete: Cascade)
  targetDependency Dependency @relation("TargetDependencyRelationships", fields: [targetDependencyId], references: [id], onDelete: Cascade)

  @@unique([analysisId, sourceDependencyId, targetDependencyId], map: "dep_relationships_analysis_source_target_key")
  @@index([analysisId])
  @@index([sourceDependencyId])
  @@index([targetDependencyId])
  @@map("dependency_relationships")
}

model DependencyAnalysisCache {
  id                     String   @id @default(uuid()) @db.Uuid
  cacheKey               String   @unique @map("cache_key")
  ecosystem              String
  packageManager         String   @map("package_manager")
  dependencyName         String   @map("dependency_name")
  versionRequirement     String?  @map("version_requirement")
  versionBucket          String?  @map("version_bucket")
  repositoryOwner        String?  @map("repository_owner")
  repositoryName         String?  @map("repository_name")
  repositoryFullName     String?  @map("repository_full_name")
  repositoryUrl          String?  @map("repository_url")
  githubMinerRaw         Json?    @map("github_miner_raw")
  issuesMiningRaw        Json?    @map("issues_mining_raw")
  issueMetrics           Json?    @map("issue_metrics")
  normalizedMetrics      Json?    @map("normalized_metrics")
  score                  Int?
  riskLevel              String?  @map("risk_level")
  popularityScore        Int?     @map("popularity_score")
  maintenanceScore       Int?     @map("maintenance_score")
  resolutionQualityScore Int?     @map("resolution_quality_score")
  warnings               Json?
  status                 String   @default("SUCCESS")
  issuesConfigHash       String   @map("issues_config_hash")
  cacheVersion           String   @map("cache_version")
  createdAt              DateTime @default(now()) @map("created_at")
  updatedAt              DateTime @updatedAt @map("updated_at")
  expiresAt              DateTime @map("expires_at")
  lastAccessedAt         DateTime @default(now()) @map("last_accessed_at")

  @@index([dependencyName])
  @@index([repositoryFullName])
  @@index([expiresAt])
  @@map("dependency_analysis_cache")
}

model DependencyRelationshipCache {
  id                       String   @id @default(uuid()) @db.Uuid
  cacheKey                 String   @unique @map("cache_key")
  sourceRepositoryFullName String   @map("source_repository_full_name")
  sourcePackageName        String   @map("source_package_name")
  targetPackageName        String   @map("target_package_name")
  relationshipType         String   @map("relationship_type")
  confidence               String
  riskAdjustment           Int      @default(0) @map("risk_adjustment")
  summary                  String
  evidence                 Json?
  searchTotalCount         Int      @default(0) @map("search_total_count")
  searchResultCount        Int      @default(0) @map("search_result_count")
  cacheVersion             String   @map("cache_version")
  createdAt                DateTime @default(now()) @map("created_at")
  updatedAt                DateTime @updatedAt @map("updated_at")
  expiresAt                DateTime @map("expires_at")
  lastAccessedAt           DateTime @default(now()) @map("last_accessed_at")

  @@index([sourceRepositoryFullName])
  @@index([targetPackageName])
  @@index([expiresAt])
  @@map("dependency_relationship_cache")
}

model LeaderboardRepository {
  id                      String   @id @default(uuid()) @db.Uuid
  owner                   String
  name                    String
  fullName                String   @map("full_name")
  url                     String
  description             String?  
  stars                   Int
  forks                   Int
  watchers                Int
  issues                  Int
  pullRequests            Int
  license                 String?
  primaryLanguage         String?
  topics                  String[]
  repositoryCreatedAt     DateTime @map("repository_created_at")
  pushedAt                DateTime @map("pushed_at")
  githubPopularityScore   Int      @map("github_popularity_score")
  githubActivityScore     Int      @map("github_activity_score")
  githubCompatibilityScore Int     @map("github_compatibility_score")
  analysisScore           Int?     @map("analysis_score")
  analysisStatus          String?  @map("analysis_status")
  analysisResultToken     String?  @map("analysis_result_token")
  analysisId              String?  @map("analysis_id")
  packageJsonPresent      Boolean  @map("package_json_present")
  category                String
  rank                    Int
  createdAt               DateTime @default(now()) @map("created_at")
  updatedAt               DateTime @updatedAt @map("updated_at")

  @@unique([fullName, category])
  @@index([category, rank])
  @@index([fullName])
  @@map("leaderboard_repositories")
}
